--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
 <body>
   <header id="home">
     <div id="navbar">
-      <img src="./images/logo.svg" alt="Easy Bank">
-      <nav>
-        <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li><a href="#blog">Blog</a></li>
-          <li><a href="#careers">Careers</a></li>
-        </ul>
-      </nav>
-      <a href="#" class="btn">Request Invite</a>
+      <div class="navbar-content">
+        <img src="./images/logo.svg" alt="Easy Bank">
+        <nav>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#blog">Blog</a></li>
+            <li><a href="#careers">Careers</a></li>
+          </ul>
+        </nav>
+        <a href="#" class="btn">Request Invite</a>
+      </div>
     </div>
   </header>
 </body>
