--- a/index.html
+++ b/index.html
@@ -25,7 +25,22 @@
             <li><a href="#careers">Careers</a></li>
           </ul>
         </nav>
-        <a href="#" class="btn">Request Invite</a>
+        <a href="#" class="btn-primary">Request Invite</a>
+      </div>
+    </div>
+    <div class="home-content">
+      <div class="container">
+        <div class="row">
+          <div class="col-1">
+            <h1>Next generation digital banking</h1>
+            <p>Take your financial life online. Your Easybank account will be a one-stop-shop
+              for spending, saving, budgeting, investing, and much more.</p>
+            <a href="#" class="btn-primary">Request Invite</a>
+          </div>
+          <div class="col-2">
+            <img src="./images/image-mockups.png" alt="">
+          </div>
+        </div>
       </div>
     </div>
   </header>
