--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
 </head>
 
 <body>
+  <!-- Header Start -->
   <header id="home">
     <div id="navbar">
       <div class="navbar-content">
         <img src="./images/logo.svg" alt="Easy Bank">
         <nav>
           <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#blog">Blog</a></li>
-            <li><a href="#careers">Careers</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Careers</a></li>
           </ul>
         </nav>
         <a href="#" class="btn-primary">Request Invite</a>
@@ -44,6 +45,127 @@
       </div>
     </div>
   </header>
+  <!-- Header End -->
+  <main>
+    <!-- About Start -->
+    <section id="about">
+      <div class="container">
+        <h2>Why Choose Easybank?</h2>
+        <p>We leverage Open Banking to turn your bank account into your financial hub. <br>Control your finances like
+          never
+          before.</p>
+        <div class="row">
+          <div class="col">
+            <img src="./images/icon-online.svg" alt="Online Banking">
+            <h3>Online Banking</h3>
+            <p>Our modern web and mobile applications allow you to keep track of your finances
+              wherever you are in the world.</p>
+          </div>
+          <div class="col">
+            <img src="./images/icon-budgeting.svg" alt="Simple Budgeting">
+            <h3>Simple Budgeting</h3>
+            <p>See exactly where your money goes each month. Receive notifications when you’re
+              close to hitting your limits..</p>
+          </div>
+          <div class="col">
+            <img src="./images/icon-onboarding.svg" alt="Fast Onboarding">
+            <h3>Fast Onboarding</h3>
+            <p>We don’t do branches. Open your account in minutes online and start taking control
+              of your finances right away.</p>
+          </div>
+          <div class="col">
+            <img src="./images/icon-api.svg" alt="Open API">
+            <h3>Open API</h3>
+            <p>Manage your savings, investments, pension, and much more from one account. Tracking
+              your money has never been easier.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- About End -->
+    <!-- Articles Start -->
+    <section id="articles">
+      <div class="container">
+        <h2>Latest Articles</h2>
+        <div class="row">
+          <div class="col">
+            <img src="./images/image-currency.jpg" alt="Currency">
+            <div class="col-content">
+              <p class="author">By Claire Robinson</p>
+              <h3>Receive money in any currency with no fees</h3>
+              <p>The world is getting smaller and we’re becoming more mobile. So why should you be
+                forced to only receive money in a single …</p>
+            </div>
+          </div>
+          <div class="col">
+            <img src="./images/image-restaurant.jpg" alt="image-restaurant">
+            <div class="col-content">
+              <p class="author">By Wilson Hutton</p>
+              <h3>Treat yourself without worrying about money</h3>
+              <p>Our simple budgeting feature allows you to separate out your spending and set
+                realistic limits each month. That means you …</p>
+            </div>
+          </div>
+          <div class="col">
+            <img src="./images/image-plane.jpg" alt="Plane">
+            <div class="col-content">
+              <p class="author">By Wilson Hutton</p>
+              <h3>Take your Easybank card wherever you go</h3>
+              <p>
+                We want you to enjoy your travels. This is why we don’t charge any fees on purchases
+                while you’re abroad. We’ll even show you …</p>
+            </div>
+          </div>
+          <div class="col">
+            <img src="./images/image-confetti.jpg" alt="confetti">
+            <div class="col-content">
+              <p class="author">By Claire Robinson</p>
+              <h3>Our invite-only Beta accounts are now live!</h3>
+              <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta.
+                It’s easy to request an invite through the site ...</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Articles End -->
+  </main>
+  <!-- Footer Start -->
+  <footer id="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-1">
+          <img src="./images/logoWhite.svg" alt="Easybank">
+          <div class="social">
+            <a href="#"><img src="./images/icon-facebook.svg" alt="Facebook"></a>
+            <a href="#"><img src="./images/icon-youtube.svg" alt="YouTube"></a>
+            <a href="#"><img src="./images/icon-twitter.svg" alt="Twitter"></a>
+            <a href="#"><img src="./images/icon-pinterest.svg" alt="Pinterest"></a>
+            <a href="#"><img src="./images/icon-instagram.svg" alt="Instagram"></a>
+          </div>
+        </div>
+        <div class="col-2">
+          <ul>
+            <li>About Us</li>
+            <li>Contact</li>
+            <li>Blog</li>
+          </ul>
+        </div>
+        <div class="col-3">
+          <ul>
+            <li>Careers</li>
+            <li>Support</li>
+            <li>Privacy Policy</li>
+          </ul>
+        </div>
+        <div class="col-4">
+          <a href="#" class="btn-primary">Request Invite</a>
+          <p>&copy; Easybank. All Rights Reserved</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- Footer End -->
 </body>
 
 </html>
