--- a/index.html
+++ b/index.html
@@ -146,16 +146,16 @@
         </div>
         <div class="col-2">
           <ul>
-            <li>About Us</li>
-            <li>Contact</li>
-            <li>Blog</li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Blog</a></li>
           </ul>
         </div>
         <div class="col-3">
           <ul>
-            <li>Careers</li>
-            <li>Support</li>
-            <li>Privacy Policy</li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Privacy Policy</a></li>
           </ul>
         </div>
         <div class="col-4">
